<resources>
    <string name="app_name">Iaso</string>

    <!-- Strings related to login and create account -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">Username</string>
    <string name="error_invalid_username">Username not available</string>
    <!-- -->
    <string
        name="login_activity_password_label">Password</string>
    <string
        name="login_activity_username_label">Username</string>
    <string
        name="login_activity_ok_button">Sign in</string>
    <string
        name="ui_activity_authenticating">Authenticating\u2026</string>
    <string
        name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Sample SyncAdapter account is
        required. Please try again. </string>
    <string
        name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <string
        name="label">Sample SyncAdapter</string>
    <string
        name="login_activity_newaccount_text">Sign in to your Sample SyncAdapter account. </string>
    <string
        name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <string name="title_activity_user_account_home">UserAccountHome</string>
    <string name="doses_prompt">Doses per day: </string>
</resources>
